updated toi radii in P-rp space

--- a/radvalley.tex
+++ b/radvalley.tex
@@ -1269,9 +1269,10 @@ intersect at $P\sim 23.52$ days such that two regions of interest emerge and are
   As seen in \autoref{fig:transition}, there are only $\sim 5$ planets in the region of interest with $\geq 3\sigma$ bulk
   density measurements. These planets reveal the decrease in bulk density with increasing $r_p$ although insufficient
   information
-  is available to resolve a possibly sharp transition. The \tess{} SPOC has already identified three TOIs of interest
+  is available to resolve a possibly sharp transition. \tess{} has already identified eleven TOIs of interest
   around stars with \teff{} $<4700$ K that should be targeted by RV follow-up
-  campaigns.\footnote{TOIs: 654.01, 732.02, and 1184.01.} }
+  campaigns.\footnote{TOIs: 134.01 \citep{astudillo19}, 237.01, 260.01, 393.01, 544.01, 702.01, 807.01, 833.01,
+    836.02, 873.01, and 1075.01.} }
 
 \begin{figure}
   \centering
@@ -1283,8 +1284,8 @@ intersect at $P\sim 23.52$ days such that two regions of interest emerge and are
     is highlighted by the \emph{dashed black line} after being scaled to the median stellar mass of
     our sample. The shaded regions bounded by
     these curves represent the subset of the $P-r_p$ parameter space of interest for resolving
-    the transition around low mass stars from precise bulk density measurements. The three TOIs from the
-    SPOC that fall within this region are marked by an `x'. Also overplotted are planets
+    the transition around low mass stars from precise bulk density measurements. The eleven TOIs
+    that fall within this region are marked by an `x'. Also overplotted are planets
     with $\geq 3\sigma$ bulk density measurements from the literature that are classified as having either
     a terrestrial (\emph{circles}), a gaseous (\emph{triangles}), or an ambiguous (\emph{squares}) bulk
     composition.}
