--- a/radvalley.tex
+++ b/radvalley.tex
@@ -1271,7 +1271,7 @@ intersect at $P\sim 23.52$ days such that two regions of interest emerge and are
   information
   is available to resolve a possibly sharp transition. \tess{} has already identified eleven TOIs of interest
   around stars with \teff{} $<4700$ K that should be targeted by RV follow-up
-  campaigns.\footnote{TOIs: 134.01 \citep{astudillo19}, 237.01, 260.01, 393.01, 544.01, 702.01, 807.01, 833.01,
+  campaigns.\footnote{TOIs: 134.01 \citep{astudillodefru19}, 237.01, 260.01, 393.01, 544.01, 702.01, 807.01, 833.01,
     836.02, 873.01, and 1075.01.} }
 
 \begin{figure}
