updated abstract, strucutre, and confirmed planet tables

--- a/K2planettable.tex
+++ b/K2planettable.tex
@@ -1,67 +1,64 @@
 \capstartfalse
 \begin{deluxetable*}{ccccccccc}
 \tabletypesize{\small}
-\tablecaption{\ktwo{} confirmed planet parameters\label{table:planetsK2}}
+\tablecaption{K2 confirmed planet parameters\label{table:planetsK2}}
 \tablehead{EPIC & Planet & $P$ & $F$ & $F$ upper limit & $F$ lower limit & $r_p$ & $r_p$ upper limit & $r_p$ lower limit \\
 & name & [days] & [F$_{\oplus}$] & [F$_{\oplus}$] & [F$_{\oplus}$] & [R$_{\oplus}$] & [R$_{\oplus}$] & [R$_{\oplus}$]}
 \startdata
-201110617 & K2-156 b & 0.81315 & 1146.7 & 5038.8 & 734.4 & 1.35 & 0.12 & 0.10 \\
-201155177 & K2-42 b & 6.68796 & 93.9 & 353.9 & 58.8 & 2.45 & 0.27 & 0.25 \\
-201205469 & K2-43 b & 3.47114 & 83.9 & 316.0 & 52.2 & 4.09 & 0.28 & 0.25 \\
-201208431 & K2-4 b & 10.00440 & 34.2 & 167.1 & 23.5 & 2.52 & 0.34 & 0.31 \\
-201338508 & K2-5 b & 5.73597 & 47.3 & 209.2 & 29.5 & 1.95 & 0.17 & 0.18 \\
-%201338508 & K2-5 c & 10.93240 & 21.3 & 99.3 & 13.3 & 2.15 & 0.20 & 0.20 \\
-%201345483 & K2-45 b & 1.72927 & 196.3 & 747.2 & 127.3 & 6.74 & 1.15 & 1.12 \\
-%201367065 & K2-3 d & 44.56090 & 2.5 & 10.2 & 1.6 & 1.42 & 0.11 & 0.10 \\
-%201367065 & K2-3 c & 24.64350 & 5.2 & 19.4 & 3.3 & 1.73 & 0.12 & 0.11 \\
-%201367065 & K2-3 b & 10.05443 & 17.6 & 74.0 & 11.2 & 2.11 & 0.12 & 0.12 \\
-%201549860 & K2-35 c & 5.60906 & 91.4 & 298.8 & 53.9 & 1.99 & 0.25 & 0.24 \\
-%201549860 & K2-35 b & 2.39991 & 273.9 & 1224.3 & 158.0 & 1.27 & 0.17 & 0.18 \\
-%201635569 & K2-14 b & 8.36926 & 14.7 & 61.3 & 9.5 & 4.51 & 0.60 & 0.57 \\
-%201637175 & K2-22 b & 0.38109 & 891.1 & 3031.7 & 601.9 & 5.04 & 0.73 & 0.45 \\
-%201690311 & K2-49 b & 2.77065 & 103.4 & 462.2 & 68.9 & 3.20 & 0.34 & 0.33 \\
-%201833600 & K2-50 b & 8.75290 & 48.0 & 187.8 & 31.0 & 1.93 & 0.29 & 0.28 \\
-%201855371 & K2-17 b & 17.96540 & 14.3 & 46.6 & 9.4 & 2.04 & 0.20 & 0.19 \\
-%201912552 & K2-18 b & 32.94180 & 1.7 & 8.9 & 1.1 & 2.54 & 0.14 & 0.14 \\
-%202083828 & K2-26 b & 14.56620 & 9.2 & 36.0 & 5.8 & 2.55 & 0.20 & 0.21 \\
-%205686202 & K2-289 b & 13.15628 & nan & nan & nan & 3.20 & 1.87 & 1.78 \\
-%205916793 & K2-54 b & 9.78430 & 25.3 & 110.6 & 15.6 & 1.90 & 0.21 & 0.20 \\
-%205924614 & K2-55 b & 2.84926 & 240.8 & 1082.2 & 160.6 & 4.16 & 0.39 & 0.37 \\
-%206011691 & K2-21 b & 9.32389 & 31.3 & 117.8 & 20.1 & 1.74 & 0.11 & 0.12 \\
-%206011691 & K2-21 c & 15.50116 & 15.1 & 54.9 & 9.5 & 2.13 & 0.15 & 0.14 \\
-%206026136 & K2-57 b & 9.00630 & 46.3 & 170.8 & 28.4 & 2.25 & 0.23 & 0.21 \\
-%206096602 & K2-62 c & 16.19660 & 26.4 & 90.1 & 16.7 & 2.00 & 0.20 & 0.21 \\
-%206096602 & K2-62 b & 6.67177 & 81.4 & 356.0 & 49.7 & 2.04 & 0.19 & 0.20 \\
-%206159027 & K2-68 b & 8.05428 & 73.2 & 286.2 & 46.3 & 1.58 & 0.16 & 0.14 \\
-%206162305 & K2-69 b & 7.06599 & 32.1 & 130.9 & 20.9 & 2.47 & 0.23 & 0.19 \\
-%206192813 & K2-71 b & 6.98541 & 26.2 & 94.5 & 17.0 & 2.37 & 0.25 & 0.23 \\
-%206209135 & K2-72 e & 24.16690 & 1.7 & 7.3 & 1.0 & 1.14 & 0.14 & 0.13 \\
-%206209135 & K2-72 d & 7.75990 & 9.5 & 32.4 & 6.0 & 1.02 & 0.14 & 0.11 \\
-%206209135 & K2-72 c & 15.18710 & 3.6 & 18.1 & 2.4 & 1.20 & 0.13 & 0.12 \\
-%206209135 & K2-72 b & 5.57739 & 13.2 & 49.6 & 8.2 & 1.06 & 0.11 & 0.10 \\
-%210448987 & K2-81 b & 6.10224 & 106.2 & 471.5 & 64.1 & 2.25 & 0.29 & 0.25 \\
-%210508766 & K2-83 c & 9.99767 & 19.0 & 72.3 & 12.1 & 1.97 & 0.13 & 0.13 \\
-%210508766 & K2-83 b & 2.74697 & 106.0 & 485.6 & 67.8 & 1.65 & 0.13 & 0.13 \\
-%210558622 & K2-174 b & 19.56400 & 19.9 & 73.9 & 12.8 & 2.53 & 0.27 & 0.24 \\
-%210707130 & K2-85 b & 0.68455 & 1643.6 & 5102.1 & 1027.2 & 1.49 & 0.17 & 0.15 \\
-%210750726 & K2-88 b & 4.61220 & 24.5 & 76.1 & 15.5 & 2.10 & 0.14 & 0.13 \\
-%210838726 & K2-89 b & 1.09603 & 269.9 & 1119.4 & 169.5 & 1.02 & 0.09 & 0.10 \\
-%210968143 & K2-90 b & 13.73110 & 21.0 & 74.9 & 13.2 & 2.71 & 0.23 & 0.24 \\
-%210968143 & K2-90 c & 2.90032 & 168.6 & 800.8 & 102.0 & 1.37 & 0.17 & 0.16 \\
-%211077024 & K2-91 b & 1.41955 & 122.2 & 432.9 & 79.9 & 1.45 & 0.12 & 0.11 \\
-%211818569 & K2-121 b & 5.18576 & 119.9 & 520.8 & 76.0 & 7.51 & 0.58 & 0.45 \\
-%211969807 & K2-104 b & 1.97499 & 122.4 & 489.8 & 69.5 & 2.04 & 0.13 & 0.13 \\
-%212069861 & K2-123 b & 30.95422 & 4.7 & 18.8 & 3.0 & 2.87 & 0.11 & 0.11 \\
-%212154564 & K2-124 b & 6.41401 & 16.3 & 68.1 & 10.0 & 3.15 & 0.13 & 0.13 \\
-%212460519 & K2-126 b & 7.38707 & 50.0 & 189.0 & 30.5 & 1.83 & 0.14 & 0.10 \\
-%212686205 & K2-128 b & 5.67581 & 99.3 & 415.5 & 61.9 & 1.20 & 0.10 & 0.08 \\
-%212779596 & K2-199 c & 7.37450 & 71.0 & 334.9 & 42.4 & 2.83 & 0.18 & 0.17 \\
-%212779596 & K2-199 b & 3.22542 & 245.0 & 1008.7 & 160.5 & 1.88 & 0.16 & 0.13 \\
-%217941732 & K2-130 b & 2.49416 & 240.9 & 835.1 & 150.5 & 1.16 & 0.12 & 0.12 \\
-%220241529 & K2-209 b & 2.08061 & 553.2 & 2471.9 & 368.8 & 0.92 & 0.13 & 0.10 \\
-%220321605 & K2-212 b & 9.79540 & 32.3 & 129.5 & 20.3 & 2.72 & 0.16 & 0.13 \\
-%220481411 & K2-216 b & 2.17479 & 383.4 & 1702.7 & 243.9 & 1.69 & 0.10 & 0.08 
+201110617 & K2-156 b & 0.81315 & 615.4 & 51.0 & 55.4 & 1.35 & 0.12 & 0.10 \\
+201155177 & K2-42 b & 6.68796 & 54.8 & 6.7 & 5.7 & 2.45 & 0.27 & 0.25 \\
+201205469 & K2-43 c & 2.19888 & 81.8 & 8.5 & 7.9 & 1.43 & 0.09 & 0.08 \\
+201205469 & K2-43 b & 3.47114 & 44.4 & 4.9 & 4.3 & 2.66 & 0.17 & 0.13 \\
+201208431 & K2-4 b & 10.00440 & 16.5 & 1.8 & 1.6 & 2.52 & 0.34 & 0.31 \\
+%%201338508 & K2-5 b & 5.73597 & 29.8 & 2.5 & 2.6 & 1.95 & 0.17 & 0.18 \\
+%%201338508 & K2-5 c & 10.93240 & 12.6 & 1.2 & 1.1 & 2.15 & 0.20 & 0.20 \\
+%%201367065 & K2-3 d & 44.56090 & 1.4 & 0.2 & 0.1 & 1.42 & 0.11 & 0.10 \\
+%%201367065 & K2-3 c & 24.64350 & 3.1 & 0.3 & 0.3 & 1.73 & 0.12 & 0.11 \\
+%%201367065 & K2-3 b & 10.05443 & 10.2 & 1.1 & 1.0 & 2.11 & 0.12 & 0.12 \\
+%%201549860 & K2-35 c & 5.60906 & 56.4 & 12.7 & 10.6 & 1.99 & 0.25 & 0.24 \\
+%%201549860 & K2-35 b & 2.39991 & 174.5 & 36.7 & 29.7 & 1.27 & 0.17 & 0.18 \\
+%%201635569 & K2-14 b & 8.36926 & 8.6 & 2.1 & 1.9 & 4.51 & 0.60 & 0.57 \\
+%%201690311 & K2-49 b & 2.77065 & 125.8 & 20.5 & 17.5 & 3.20 & 0.34 & 0.33 \\
+%%201833600 & K2-50 b & 8.75290 & 25.9 & 5.4 & 4.4 & 1.93 & 0.29 & 0.28 \\
+%%201855371 & K2-17 b & 17.96540 & 7.7 & 0.6 & 0.5 & 2.04 & 0.20 & 0.19 \\
+%%201912552 & K2-18 b & 32.94180 & 1.1 & 0.1 & 0.1 & 2.54 & 0.14 & 0.14 \\
+%%202083828 & K2-26 b & 14.56620 & 5.2 & 0.8 & 0.7 & 2.55 & 0.20 & 0.21 \\
+%%205916793 & K2-54 b & 9.78430 & 13.9 & 2.0 & 1.8 & 1.90 & 0.21 & 0.20 \\
+%%205924614 & K2-55 b & 2.84926 & 134.2 & 30.2 & 26.6 & 4.16 & 0.39 & 0.37 \\
+%%206011691 & K2-21 b & 9.32389 & 16.8 & 1.1 & 1.2 & 1.74 & 0.11 & 0.12 \\
+%%206011691 & K2-21 c & 15.50116 & 8.5 & 0.6 & 0.6 & 2.13 & 0.15 & 0.14 \\
+%%206026136 & K2-57 b & 9.00630 & 27.4 & 2.7 & 2.2 & 2.25 & 0.23 & 0.21 \\
+%%206096602 & K2-62 c & 16.19660 & 15.2 & 3.3 & 2.8 & 2.00 & 0.20 & 0.21 \\
+%%206096602 & K2-62 b & 6.67177 & 49.6 & 10.8 & 9.1 & 2.04 & 0.19 & 0.20 \\
+%%206159027 & K2-68 b & 8.05428 & 43.4 & 6.8 & 6.0 & 1.58 & 0.16 & 0.14 \\
+%%206162305 & K2-69 b & 7.06599 & 20.5 & 3.9 & 3.5 & 2.47 & 0.23 & 0.19 \\
+%%206192813 & K2-71 b & 6.98541 & 16.1 & 2.4 & 2.4 & 2.37 & 0.25 & 0.23 \\
+%%206209135 & K2-72 d & 7.75990 & 5.2 & 1.0 & 0.8 & 1.02 & 0.14 & 0.11 \\
+%%206209135 & K2-72 c & 15.18710 & 2.1 & 0.4 & 0.3 & 1.20 & 0.13 & 0.12 \\
+%%206209135 & K2-72 e & 24.16690 & 1.1 & 0.2 & 0.2 & 1.14 & 0.14 & 0.13 \\
+%%206209135 & K2-72 b & 5.57739 & 7.9 & 1.4 & 1.4 & 1.06 & 0.11 & 0.10 \\
+%%210448987 & K2-81 b & 6.10224 & 65.2 & 18.4 & 14.9 & 2.25 & 0.29 & 0.25 \\
+%%210508766 & K2-83 b & 2.74697 & 64.2 & 6.2 & 5.1 & 1.65 & 0.13 & 0.13 \\
+%%210508766 & K2-83 c & 9.99767 & 11.5 & 1.0 & 1.0 & 1.97 & 0.13 & 0.13 \\
+%%210558622 & K2-174 b & 19.56400 & 10.9 & 2.5 & 1.9 & 2.53 & 0.27 & 0.24 \\
+%%210707130 & K2-85 b & 0.68455 & 869.3 & 166.9 & 153.0 & 1.49 & 0.17 & 0.15 \\
+%%210750726 & K2-88 b & 4.61220 & 15.8 & 2.1 & 1.8 & 2.10 & 0.14 & 0.13 \\
+%%210838726 & K2-89 b & 1.09603 & 161.5 & 14.3 & 14.9 & 1.02 & 0.09 & 0.10 \\
+%%210968143 & K2-90 b & 13.73110 & 11.6 & 2.2 & 1.8 & 2.71 & 0.23 & 0.24 \\
+%%210968143 & K2-90 c & 2.90032 & 93.9 & 16.9 & 15.4 & 1.37 & 0.17 & 0.16 \\
+%%211077024 & K2-91 b & 1.41955 & 67.0 & 8.4 & 7.0 & 1.45 & 0.12 & 0.11 \\
+%%211969807 & K2-104 b & 1.97499 & 69.4 & 13.2 & 11.3 & 2.04 & 0.13 & 0.13 \\
+%%212069861 & K2-123 b & 30.95422 & 2.7 & 0.3 & 0.3 & 2.87 & 0.11 & 0.11 \\
+%%212154564 & K2-124 b & 6.41401 & 10.0 & 1.5 & 1.3 & 3.15 & 0.13 & 0.13 \\
+%%212460519 & K2-126 b & 7.38707 & 29.2 & 1.8 & 1.7 & 1.83 & 0.14 & 0.10 \\
+%%212686205 & K2-128 b & 5.67581 & 58.0 & 4.6 & 4.4 & 1.20 & 0.10 & 0.08 \\
+%%212779596 & K2-199 c & 7.37450 & 44.0 & 5.3 & 3.9 & 2.83 & 0.18 & 0.17 \\
+%%212779596 & K2-199 b & 3.22542 & 133.7 & 15.2 & 13.7 & 1.88 & 0.16 & 0.13 \\
+%%217941732 & K2-130 b & 2.49416 & 140.7 & 15.1 & 12.8 & 1.16 & 0.12 & 0.12 \\
+%%220241529 & K2-209 b & 2.08061 & 290.0 & 59.1 & 56.0 & 0.92 & 0.13 & 0.10 \\
+%%220321605 & K2-212 b & 9.79540 & 17.3 & 1.6 & 1.6 & 2.72 & 0.16 & 0.13 \\
+%%220481411 & K2-216 b & 2.17479 & 209.6 & 17.2 & 15.5 & 1.69 & 0.10 & 0.08 
 \enddata
-%\tablecomments{}
+\tablecomments{Only the first five rows are shown here to illustrate the table's content and format.}
 \end{deluxetable*}
 \capstarttrue
