--- a/refs.bib
+++ b/refs.bib
@@ -28274,3 +28274,19 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+
+@ARTICLE{neil19b,
+       author = {{Neil}, Andrew R. and {Rogers}, Leslie A.},
+        title = "{A Joint Mass-Radius-Period Distribution of Exoplanets}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics - Earth and Planetary Astrophysics},
+         year = "2019",
+        month = "Nov",
+          eid = {arXiv:1911.03582},
+        pages = {arXiv:1911.03582},
+archivePrefix = {arXiv},
+       eprint = {1911.03582},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019arXiv191103582N},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
