--- a/radvalley.tex
+++ b/radvalley.tex
@@ -101,18 +101,21 @@ of Toronto, 50 St. George Street, Toronto, ON, M5S 3H4, Canada}
   exploiting the \gaia{} DR2 data to refine the stellar parameters. 
   The application of appropriate completeness corrections %to the empirical planet population
   clearly reveals the radius valley in the maximum a-posteriori occurrence rates as a
-  function of orbital separation and planet radius. The slope of the valley %with orbital separation
-  is shown to differ in sign from that measured around Sun-like stars suggesting that
+  function of orbital separation and planet radius. The slope of the valley with orbital separation
+  bears the opposite sign from that measured around Sun-like stars suggesting that
   thermally driven atmospheric mass loss may not dominate the evolution of planets in the low stellar mass
-  regime or that we are witnessing the emergence of a separate channel of planet formation around  
-  low mass stars. The latter notion is supported by the relative occurrence of terrestrial to gaseous planets
+  regime or that we are witnessing the emergence of a separate channel of planet formation.
+  The latter notion is supported by the relative occurrence of terrestrial to gaseous planets
   which increases from $0.5\pm 0.1$ to $8.5\pm 4.6$ from mid-K to mid-M dwarfs.
-  The location of the radius valley features are also shown to shift to smaller sizes with
+  Furthermore, the location of the radius valley features are shown to shift to smaller sizes with
   decreasing stellar mass in agreement with physical models of photoevaporation,
-  core-powered mass loss, and gas-poor formation. Although current measurements are
-  insufficient to robustly identify the dominant formation pathway of the radius valley,
-  such inferences may be obtained by \tess{} with $\mathcal{O}(85,000)$
-  mid-to-late M dwarfs observed with 2 minute cadence.
+  core-powered mass loss, and gas-poor formation. %Although current measurements are
+  %insufficient to robustly identify the dominant formation pathway of the radius valley,
+  %such inferences may be obtained by \tess{} with $\mathcal{O}(85,000)$
+  %mid-to-late M dwarfs observed with 2 minute cadence.
+  \textbf{These measurements precisely indicate the subset of planetary orbital periods and radii
+    that should be targeted in radial velocity surveys to resolve the rocky-to-gaseous transition
+    around low mass stars.}  
 \end{abstract}
 
 
@@ -406,7 +409,6 @@ measurement uncertainties and with a fractional precision on $P$ inflated to 20\
 
 \input{Keplerplanettable}
 \input{K2planettable}
-
 
 The empirical planet popluation in \autoref{fig:Ndet} exhibits many recognizable features in the distribution of
 planets orbiting low mass stars \citep[e.g.][]{morton14,dressing15a,gaidos16}. Namely, the dearth of planets with
@@ -862,7 +864,7 @@ value to model predictions of the transition from terrestrial to gaseous planets
 versus insolation. We measure the slope by resampling $10^3$ planet populations from the inverse
 occurrence rates (and their fractional uncertainties at each point $ij$) over the domains
 $F\in [1,30]$ F$_{\oplus}$ and $r_p\in [1,2.5]$ R$_{\oplus}$.
-Each domain is defined to neglect regions far from the radius valley which would otherwise dominate the
+Each domain is defined to neglect regions far from the radius valley that would otherwise dominate the
 inverse occurrence rates. The number of sampled planets in the $\log{F}-r_p$ space is then fit with a
 linear function as depicted in \autoref{fig:fmapF}. Over the $10^3$ realizations of the resampled planet
 population we measure an average slope and standard deviation of
@@ -895,7 +897,8 @@ The negative slope of $\text{d}r_p / \text{d}\log{F} = -0.123$ indicates that th
 drops to smaller planet radii with increasing insolation (i.e. towards smaller orbital separations).
 This behavior
 is broadly consistent with models of the formation small terrestrial planets in a gas-poor environment
-\citep{lee14,lee16,lopez18} leading to the transition from terrestrial to gaseous planets emerging due to the
+\citep{lee14,lee16,lopez18}. This formation scenario
+leads to the transition from terrestrial to gaseous planets emerging due to the
 superposition of terrestrial and gaseous planet populations whose formation timescales differ. In this scenario, the
 transition radius as a function of orbital separation is set by the maximum mass of a bare rocky core which
 itself is set by the amount of available solid material for the proto-planet to form out of via collisional
@@ -918,7 +921,7 @@ escape from photoevaporation or core-powered mass loss that predict
 an increasing transition radius with increasing insolation ($r_{p,\text{valley}} \propto F^{0.11}$; \citealt{lopez18},  
 $r_{p,valley} \propto F^{0.10}$; \citealt{gupta19b} respectively).
 The negative slope of the radius valley around low mass stars differs in sign from the trend seen around
-Sun-like stars \citep{martinez19}.
+Sun-like stars \citep[$\text{d}r_p / \text{d}\log{F} = +0.12$, $\text{d}r_p / \text{d}\log{P} = -0.11$]{martinez19}.
 The differing observational findings in each stellar mass regime may either be interpretted as
 a signature of distinct planet formation processes, wherein gas-poor planet formation is more prominent
 around low mass stars, or that the efficiency of atmospheric post processing weakens around lower mass stars.
@@ -929,8 +932,8 @@ The inclusion of planets with $\geq 3\sigma$ bulk density measurements (see \aut
 compositions lie above the transition radius predictions from all physical models considered
 (i.e. gas-poor formation, photoevaporation, core-powered mass loss, and impact erosion). However, the
 temperate terrestrial planet LHS 1140b ($F=0.5$ F$_{\oplus}$, $r_p=1.7$ R$_{\oplus}$) sits in the $F-r_p$ parameter
-space below the predicted transition radius from gas-poor formation but above the predicted transition from all
-other models considered. Although LHS 1140b is the only instance of a planet
+space below the predicted transition radius from gas-poor formation but above the predicted transition from
+photoevaporation, core-powered mass loss, and impact erosion. Although LHS 1140b is the only instance of a planet
 existing between the radius valley predictions from gas-poor formation and thermally driven or impact driven
 mass loss in \autoref{fig:fmapF}, the location and composition of LHS 1140b
 provides supporting evidence for the applicability of models of 
@@ -1083,10 +1086,12 @@ is indicative of the effective disappearance of gaseous planets around increasin
 (see \autoref{fig:rphistcomp}) while terrestrial-sized planets appear to persist.
 Furthermore, the reduced slope of the terrestrial peak may be evidence for
 a characteristic planetary core size of $\approx 1$ R$_{\oplus}$ although its exact location is largely uncertain
-due to the limited detection sensitivity to sub-Earth-sized planets. Typical core sizes may also be stellar mass
-dependent as a core size for a fixed mass is composition dependent and the mass of heavy elements per star
+due to the limited detection sensitivity to sub-Earth-sized planets. Furthermore, the probablistic classification
+of terrestrial planets as being primoridally rocky or an evaporated core requires additional information
+about the planet's orbit and stellar host properties \citep{neil19b}. 
+For example, typical core sizes may be $M_s$-dependent
+as a core size for a fixed core mass is composition dependent and the mass of heavy elements per star
 is known to to be higher around M dwarfs compared to around FGK stars \citep{mulders15a,mulders15b,neil19}.
-
 
 Models of the formation of the radius valley based upon photoevaporation \citep{wu19}, gas-poor formation \citep{lopez18},
 and core-powered mass loss \citep{gupta19b} all make explicit predictions for the evolution of the radius valley location
@@ -1108,6 +1113,87 @@ the detection sensitivity to planets spanning the radius valley (see Sect.~\ref{
 
 
 \section{Discussion} \label{sect:discussion}
+\subsection{Implications for RV planet searches around low mass stars}
+Many existing and up-coming RV spectrographs
+will be partially focused on characterizing the masses of planets spanning the radius valley in order to
+improve our physical understanding of the nature of those planets. In particular, a subset of those spectrographs
+operating in the near-IR will focus heavily on M dwarf planetary systems
+(e.g. CARMENES; \citealt{quirrenbach14}, HPF; \citealt{mahadevan12}, IRD; \citealt{kotani14},
+NIRPS; \citealt{bouchy17}, SPIRou; \citealt{donati18}). In defining target samples
+that are equally complete on either side of the radius valley, it is critically important that the location
+of the transition between terrestrial and gaseous planets is known. In our full stellar sample, which includes
+mid-to-late K dwarfs, the radius valley is centered at $1.54\pm 0.16$ R$_{\oplus}$. Although we remind the
+reader that the exact value is dependent on the planet's separation (see \autoref{fig:fmapF}). A consistent value of
+$1.55^{+0.52}_{-0.50}$ is also recovered---albeit with reduced signficance---around stars later than about M2.5V.
+This value is slightly lower than the valley locations measured around Sun-like stars of
+$\sim 1.9$ R$_{\oplus}$ for $M_s \sim 1.2$ M$_{\odot}$ and $\sim 1.7$ R$_{\oplus}$ for $M_s \sim 0.85$ M$_{\odot}$
+\citep{fulton18}.
+
+\textbf{Furthermore, the opposing slope signs of the radius valley around Sun-like and low mass
+stars has implications for where in the planetary parameter space one expects to find
+predominantly terrestrial and gaseous planets. \autoref{fig:transition} highlights the region of interest for resolving
+the rocky-to-gaseous transition in the $P-r_p$ space. This region is defined by the intermediate region between the
+radius valley slope measured in this work to the slope measured around Sun-like stars from the CKS sample \citep{martinez19}
+where the latter is first scaled
+from its median stellar mass of 1.01 M$_{\odot}$ to the median stellar mass of our sample (0.65 M$_{\odot}$) using the
+$M_s$-dependent scaling relation of the radius valley under photoevaporation \citep{wu19}.}
+For reference, recall the measured slopes of
+$\text{d}r_p/\text{d}\log{P} = 0.085$ and $\text{d}\log{r_p}/\text{d}\log{P} = -0.11$ in the low mass and Sun-like stellar
+mass regimes respectively.
+
+\textbf{The measured transitions from each stellar mass regime
+intersect at $P\sim 23.52$ days such that two regions of interest emerge and are bounded by}
+
+\begin{equation}
+  r_p \in 
+  \begin{cases}
+        [r_{p,\text{valley,this work}}, r_{p,\text{valley,M19}}], & P < 23.52 \text{ days,} \\
+        [r_{p,\text{valley,M19}}, r_{p,\text{valley,this work}}], & P > 23.52 \text{ days.} \\
+  \end{cases}  \label{eq:transition}
+\end{equation}
+
+\noindent where
+
+\begin{align}
+  r_{p,\text{valley,this work}} &= 0.11\cdot \log_{10}(P)+1.52, \\
+  r_{p,\text{valley,M19}} &= -0.48\cdot \log_{10}(P)+2.32.
+\end{align}
+
+\noindent \textbf{These subsets of the $P-r_p$ space define the regions of interest for resolving the
+  rocky-to-gaseous transition around low mass stars. For example, at $P\lesssim 23.52$ days thermally driven
+  atmospheric mass loss, such as that from photoevaporation, predicts that planets in the set defined by
+  Eq.~\ref{eq:transition} should be predominantly rocky. Whereas the gas-poor formation scenario, whose predicted
+  radius valley slope differs in sign from that of thermally driven mass loss, predicts that those planets should be
+  predominantly gaseous. These predictions can be robustly tested by targeting planets within the
+  Eq.~\ref{eq:transition} regions of interest and obtaining precise planetary bulk density measurements.
+  As seen in \autoref{fig:transition}, there are only $\sim 5$ planets in the region of interest with $\geq 3\sigma$ bulk
+  density measurements. These planets reveal the decrease in bulk density with increasing $r_p$ although insufficient
+  information is available to resolve a possibly sharp transition.
+  NASA's Transiting Exoplanet Survey Satellite \citep[\tess{;}][]{ricker15} has already identified eleven
+  TOIs\footnote{\tess{} Object-of-Interest.}
+  around stars with \teff{} $<4700$ K that satisfy Eq.~\ref{eq:transition} and should be targeted by RV
+  follow-up campaigns.\footnote{TOIs: 134.01 \citep{astudillodefru19}, 237.01, 260.01, 393.01, 544.01, 702.01, 807.01, 833.01,
+    836.02, 873.01, and 1075.01.} Note that all eleven planet candidates have $P<23.52$ days.}
+
+\begin{figure}
+  \centering
+  \includegraphics[width=0.99\hsize]{figures/fmapregion_Msgt0d0_xbin39_ybin26.png}
+  \caption{Regions of interest for resolving the transition between terrestrial and gaseous planets
+    around low mass stars. The colormap depicts the occurrence rate of small close-in planets from
+    \autoref{fig:fmap}. The rocky-to-gaseous transition measured in this work is highlighted
+    by the \emph{solid black line}. The transition measured around FGK stars from \cite{martinez19}
+    is highlighted by the \emph{dashed black line} after being scaled to the median stellar mass of
+    our sample. The shaded regions bounded by
+    these curves represent the subset of the $P-r_p$ parameter space of interest for resolving
+    the transition around low mass stars from precise bulk density measurements. The eleven TOIs
+    that fall within this region are marked by an `x'. Also overplotted are planets
+    with $\geq 3\sigma$ bulk density measurements from the literature that are classified as having either
+    a terrestrial (\emph{circles}), a gaseous (\emph{triangles}), or an ambiguous (\emph{squares}) bulk
+    composition.}
+  \label{fig:transition}
+\end{figure}
+
+
 \subsection{Improving constraints on the sculpting of the radius valley using mid-M dwarfs} \label{sect:improve}
 The issue of having insufficient information to distinguish between photoevaporation, core-powered mass loss, and gas-poor
 formation around low mass stars can be addressed with two steps. Firstly, by expanding the low mass stellar sample in 
@@ -1130,7 +1216,7 @@ given the detection sensitvity, the transit proability, and their inherent rate 
 Through sectors 1-14, \tess{} has observed $N_{s,\text{TESS}} = 23,051$ stars less massive than 0.4 M$_{\odot}$
 with 2 minute cadence from its Candidate Target List \citep[CTL;][]{stassun19}.
 Among these stars, the SPOC has reported three objects of interest close to the radius valley
-between $1.4-1.6$ R$_{\oplus}$\footnote{\tess{} Objects-of-Interest, TOIs: 175.01, 406.01, and 667.01.}. 
+between $1.4-1.6$ R$_{\oplus}$\footnote{TOIs: 175.01, 406.01, and 667.01.}. 
 Assuming a 0\% false positive rate
 among these planet candidates, and the same MAP occurrence rate measured with \kepler{}
 ($f_{\text{valley}}\approx 0.19$ planets per star), we find the probability of \tess{} to detect a transiting planet
@@ -1217,83 +1303,6 @@ to reach $\sim 0.14$ R$_{\oplus}$ which would enable models of photoevaporation 
 core-powered mass low or gas-poor formation at $\sim 2.6\sigma$.
 
 
-\subsection{Implications for RV planet searches around low mass stars}
-Many existing and up-coming RV spectrographs
-will be partially focused on characterizing the masses of planets spanning the radius valley in order to
-improve our physical understanding of the nature of those planets. In particular, a subset of those spectrographs
-operating in the near-IR will focus heavily on M dwarf planetary systems
-(e.g. CARMENES; \citealt{quirrenbach14}, HPF; \citealt{mahadevan12}, IRD; \citealt{kotani14},
-NIRPS; \citealt{bouchy17}, SPIRou; \citealt{donati18}). In defining target samples
-that are equally complete on either side of the radius valley, it is critically important that the location
-of the transition between terrestrial and gaseous planets is known. In our full stellar sample which includes
-mid-to-late K dwarfs, the measured radius valley location is $1.54\pm 0.16$ R$_{\oplus}$. Although we remind the
-reader that the exact value is dependent on the planet's separation (see \autoref{fig:fmapF}). A consistent value of
-$1.55^{+0.52}_{-0.50}$ is also recovered---albeit with reduced signficance---around stars later than about M2.5V.
-This value is slightly lower than the valley locations measured around Sun-like stars of
-$\sim 1.9$ R$_{\oplus}$ for $M_s \sim 1.2$ M$_{\odot}$ and $\sim 1.7$ R$_{\oplus}$ for $M_s \sim 0.85$ M$_{\odot}$
-\citep{fulton18}.
-
-\textbf{Furthermore, the opposing slope signs of the radius valley around Sun-like and low mass
-stars has implications for where in the planetary parameter space one expects to find
-predominantly terrestrial or gaseous planets. \autoref{fig:transition} reveals the region of interest for resolving
-the terrestrial-to-gaseous transition in the $P-r_p$ space by comparing the radius valley slope measured in this work around
-low mass stars to the slope measured around Sun-like stars from the CKS sample \citep{martinez19}. The latter is scaled
-from its median stellar mass of 1.01 M$_{\odot}$ to the median stellar mass of our sample (0.65 M$_{\odot}$) using the
-$M_s$-dependent scaling relation of the radius valley under photoevaporation \citep{wu19}.}
-
-\textbf{The measured transitions around low mass and Sun-like stars
-intersect at $P\sim 23.52$ days such that two regions of interest emerge and are bounded by}
-
-\begin{equation}
-  r_p \in 
-  \begin{cases}
-        [r_{p,\text{valley,this work}}, r_{p,\text{valley,M19}}], & P < 23.52 \text{ days,} \\
-        [r_{p,\text{valley,M19}}, r_{p,\text{valley,this work}}], & P > 23.52 \text{ days.} \\
-  \end{cases}  \label{eq:transition}
-\end{equation}
-
-\noindent where
-
-\begin{align}
-  r_{p,\text{valley,this work}} &= 0.11\cdot \log_{10}(P)+1.52, \\
-  r_{p,\text{valley,M19}} &= -0.48\cdot \log_{10}(P)+2.32.
-\end{align}
-
-\noindent \textbf{These subsets of the $P-r_p$ space define the regions of interest for resolving the
-  terrestrial-to-gaseous transition around low mass stars. For example at $P\lesssim 23.52$ days, thermally driven
-  atmospheric mass loss, such as that from photoevaporation, predicts that planets in the set defined by
-  Eq.~\ref{eq:transition} should be predominantly rocky. Whereas the gas-poor formation scenario, whose predicted
-  radius valley slope differs in sign from that of thermally driven mass loss, predicts that those planets should be
-  predominantly gaseous. These predictions can be robustly tested by targeting planets within the
-  Eq.~\ref{eq:transition} regions of interest and obtaining precise planetary bulk density measurements.
-  As seen in \autoref{fig:transition}, there are only $\sim 5$ planets in the region of interest with $\geq 3\sigma$ bulk
-  density measurements. These planets reveal the decrease in bulk density with increasing $r_p$ although insufficient
-  information
-  is available to resolve a possibly sharp transition. \tess{} has already identified eleven TOIs of interest
-  around stars with \teff{} $<4700$ K that should be targeted by RV follow-up
-  campaigns.\footnote{TOIs: 134.01 \citep{astudillodefru19}, 237.01, 260.01, 393.01, 544.01, 702.01, 807.01, 833.01,
-    836.02, 873.01, and 1075.01.} }
-
-\begin{figure}
-  \centering
-  \includegraphics[width=0.99\hsize]{figures/fmapregion_Msgt0d0_xbin39_ybin26.png}
-  \caption{Regions of interest for resolving the transition between terrestrial and gaseous planets
-    around low mass stars. The colormap depicts the occurrence rate of small close-in planets from
-    \autoref{fig:fmap}. The terrestrial-to-gaseous transition measured in this work is highlighted
-    by the \emph{solid black line}. The transition measured around FGK stars from \cite{martinez19}
-    is highlighted by the \emph{dashed black line} after being scaled to the median stellar mass of
-    our sample. The shaded regions bounded by
-    these curves represent the subset of the $P-r_p$ parameter space of interest for resolving
-    the transition around low mass stars from precise bulk density measurements. The eleven TOIs
-    that fall within this region are marked by an `x'. Also overplotted are planets
-    with $\geq 3\sigma$ bulk density measurements from the literature that are classified as having either
-    a terrestrial (\emph{circles}), a gaseous (\emph{triangles}), or an ambiguous (\emph{squares}) bulk
-    composition.}
-  \label{fig:transition}
-\end{figure}
-
-
-
 \subsection{Imperfect clearing of the radius valley} \label{sect:void}
 As noted in Sect.~\ref{sect:fmap} and evidenced in \autoref{fig:fmap}, the radius valley is not completely
 void of confirmed planets. If the radius valley around low mass stars is produced solely from the late formation
@@ -1337,26 +1346,29 @@ using data from the \kepler{} and \ktwo{} transit surveys. Our main findings are
 \begin{itemize}
 \item The radius valley structure in the occurrence rate of small close-in planets---previously resolved around
   Sun-like stars---is demonstrated to persist around low mass stars (i.e. mid-K to mid-M dwarfs).
-\item The radius valley around low mass stars exhibits a negative slope with orbital separation
+\item The radius valley around low mass stars exhibits a negative slope with insolation
   ($\text{d}r_p / \text{d}\log{F} = -0.123\pm 0.054$) unlike 
-  around Sun-like stars whose measured slope is positive. These observations
-  support models of gas-poor terrestrial planet formation without invoking atmospheric escape from photoevaporation,
+  around Sun-like stars whose measured slope is positive
+  \citep[$\text{d}\log{r_p} / \text{d}\log{F} = 0.12\pm 0.02$]{martinez19}. This result 
+  supports models of gas-poor terrestrial planet formation without invoking atmospheric escape from photoevaporation,
   core-powered mass loss, or erosion by planetesimal impacts.
-\item The gaseous planet peak in the bimodal occurrence rates centered at $\sim 2$ R$_{\oplus}$, effectively
+\item The gaseous planet peak in the bimodal occurrence rates is centered at $\sim 2$ R$_{\oplus}$ and effectively
   vanishes around mid-M dwarfs as terrestrial planets ($\lesssim 1.6$ R$_{\oplus}$) increasingly dominate the close-in
   planet population towards later spectral types. The relative fraction of terrestrial to gaseous planets increases
   from $\sim 0.5\pm 0.1 \to 8.5\pm 4.6$ from mid-K to mid-M dwarfs.
-\item The occurrence rate-weighted central radius of each planet peak and the radius valley shift to smaller
-  sizes with decreasing stellar mass. The slope of the gaseous planet peak's radius with stellar mass is shown to be
-  twice that of the terrestrial peak radius indicating that the planet population in each stellar mass bin
+\item The occurrence rate-weighted location of the radius valley---and the central radius of each planet peak---shift
+  to smaller
+  sizes with decreasing stellar mass. The slope of the gaseous planet peak's central radius with stellar mass is
+  twice that of the terrestrial peak's slope indicating that the planet population in each stellar mass bin
   tends to converge towards rocky planet cores of $\sim 1$ R$_{\oplus}$ around later spectral types.
 \item Robust inferences to distinguish between various proposed physical mechanisms for the formation of the
   radius valley are expected to require $\mathcal{O}(85,000)$ mid-M dwarfs observed with 2 minute cadence with
   \tess{} or $\mathcal{O}(4700)$ mid-M dwarfs observed with \plato{} based on its expected performance and
   observing strategy.
 \item We advocate that transiting planets around stars with \teff{} $<4700$ K, and whose orbital periods and radii are
-  situated between model predictions of the location of the terrestrial-to-gaseous transition (see \autoref{fig:transition}),
-  should be targeted by RV campaigns to resolve location and slope of this transition using precise bulk density measurements. 
+  situated between model predictions of the location of the rocky-to-gaseous transition (see \autoref{fig:transition}),
+  should be targeted by RV campaigns to resolve the location and slope of this transition from precise bulk density
+  measurements. 
 \end{itemize}
 
 
